[gd_scene load_steps=4 format=3 uid="uid://biwj3h5ab7qsc"]

[ext_resource type="Script" uid="uid://nemvl38ug6x5" path="res://scripts/implicit_mesh_obj.gd" id="1_857te"]
[ext_resource type="Script" uid="uid://dnfqtwlbjd88x" path="res://scripts/implicid_mesh_CS.gd" id="4_82l21"]

[sub_resource type="GDScript" id="GDScript_82l21"]
script/source = "extends Control
"

[node name="ImplicitSurface" type="Node3D"]
script = ExtResource("1_857te")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = SubResource("GDScript_82l21")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 7.625
anchor_bottom = 1.925
offset_right = -265.0
offset_bottom = -37.0

[node name="HBRadius" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="lbl_radius" type="Label" parent="Control/VBoxContainer/HBRadius"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "RADIUS"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBRadius"]
layout_mode = 2
alignment = 1

[node name="slider_radius" type="HSlider" parent="Control/VBoxContainer/HBRadius/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
step = 0.2
value = 2.0

[node name="HBPosX" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="lbl_res" type="Label" parent="Control/VBoxContainer/HBPosX"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "POS X"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBPosX"]
layout_mode = 2
alignment = 1

[node name="slider_pos_x" type="HSlider" parent="Control/VBoxContainer/HBPosX/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 10.0

[node name="HBPosY" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="lbl_res" type="Label" parent="Control/VBoxContainer/HBPosY"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "POS Y"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBPosY"]
layout_mode = 2
alignment = 1

[node name="slider_pos_y" type="HSlider" parent="Control/VBoxContainer/HBPosY/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 10.0

[node name="HBPosZ" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="lbl_res" type="Label" parent="Control/VBoxContainer/HBPosZ"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "POS Z"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBPosZ"]
layout_mode = 2
alignment = 1

[node name="slider_pos_z" type="HSlider" parent="Control/VBoxContainer/HBPosZ/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 10.0

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
script = ExtResource("4_82l21")

[connection signal="drag_ended" from="Control/VBoxContainer/HBRadius/VBoxContainer/slider_radius" to="." method="_on_slider_radius_drag_ended"]
[connection signal="value_changed" from="Control/VBoxContainer/HBRadius/VBoxContainer/slider_radius" to="." method="_on_slider_radius_value_changed"]
[connection signal="drag_ended" from="Control/VBoxContainer/HBPosX/VBoxContainer/slider_pos_x" to="." method="_on_slider_pos_x_drag_ended"]
[connection signal="value_changed" from="Control/VBoxContainer/HBPosX/VBoxContainer/slider_pos_x" to="." method="_on_slider_pos_x_value_changed"]
[connection signal="drag_ended" from="Control/VBoxContainer/HBPosY/VBoxContainer/slider_pos_y" to="." method="_on_slider_pos_y_drag_ended"]
[connection signal="value_changed" from="Control/VBoxContainer/HBPosY/VBoxContainer/slider_pos_y" to="." method="_on_slider_pos_y_value_changed"]
[connection signal="drag_ended" from="Control/VBoxContainer/HBPosZ/VBoxContainer/slider_pos_z" to="." method="_on_slider_pos_z_drag_ended"]
[connection signal="value_changed" from="Control/VBoxContainer/HBPosZ/VBoxContainer/slider_pos_z" to="." method="_on_slider_pos_z_value_changed"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
